[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Code" type="Label" parent="."]
margin_left = 412.0
margin_top = 318.17
margin_right = 612.0
margin_bottom = 418.17
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "asdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 332.0
margin_top = 204.789
margin_right = 692.0
margin_bottom = 272.789
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
text = "CREATE GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Timer_Label" type="Label" parent="."]
margin_left = 337.0
margin_top = 500.0
margin_right = 687.0
margin_bottom = 550.0
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
